# speech_text_render

./: .gitignore  Plan.md  README.md  dataset_config.yaml  pyproject.toml  requirements.txt
core/: audio_aligner.py  calibrator.py  control_text_builder.py  default_population_stats.json
core/audio_aligner/: __init__.py  audio_aligner.py  text_normalizer.py
core/audio_aligner/mfa_model/mandarin_acoustic/: final.occs  meta.yaml  tree
core/feature_extractor/: __init__.py  base_extractor.py  emotion_extractor.py  emphasis_extractor.py  pause_exactor.py  pause_extractor.py  pitch_extractor.py  speed_extractor.py  style_extractor.py  volume_extractor.py
core/utils/: audio_utils.py
docs/: stage2_review.md
examples/: collect_emotional_audio.py  test_audio_aligner.py  test_calibrator.py  test_qwen3.py  test_qwen3_comparison.py  web_visualizer.py
examples/audios/en/: LJ001-0001.txt
examples/audios/en_emotion/: en_happy_001.txt  en_happy_002.txt  en_sad_001.txt  en_surprised_001.txt
examples/audios/zh/: D4_750.txt  D4_751.txt  D4_752.txt  D4_753.txt  D4_754.txt
examples/audios/zh_emotion/: zh_angry_002.txt
examples/audios/zh_en/: zh_en_test_0001.txt  zh_en_test_0002.txt  zh_en_test_0003.txt
scripts/: download_librispeech_100.sh  setup.sh
speech_text_render.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
