[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-text-render"
version = "0.1.0"
description = "语音控制符文本渲染工具 — 从音频中提取停顿、语速、音量、情感等特征并生成带控制标签的 TTS 文本"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.12"
authors = [
    {name = "liuyoude"},
]

dependencies = [
    "librosa==0.11.0",
    "numpy==1.23.0",
    "seaborn",
    "funasr",
    "tqdm",
    "matplotlib",
    "qwen-asr",
    "torchfcpe",
    "pyyaml",
    "pyloudnorm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["core*"]

[tool.ruff]
line-length = 120
target-version = "py310"
